--- a/launcher/static/css/style.css
+++ b/launcher/static/css/style.css
@@ -77,6 +77,7 @@ body:before {
 .select2-selection__choice
 {
     background-color: #3E4551 !important;
+    font-size: 16px !important;
 }
 
 .card,
