--- a/launcher/templates/bot_card.html
+++ b/launcher/templates/bot_card.html
@@ -25,7 +25,8 @@
             </p>
         </div>
         <div class="col-6">
-            <button route="{{ url_for('install') }}" type="button" class="btn btn-primary waves-effect {% if is_up_to_date %}disabled{% endif %}">Install or Update Octobot</button>
+            <button route="{{ url_for('install') }}" type="button" class="btn btn-primary waves-effect {% if bot_server_version != '0' and is_up_to_date %}disabled{% endif %}">Update Octobot</button>
+            <button route="{{ url_for('tentacles') }}" type="button" class="btn btn-primary waves-effect {% if is_up_to_date %}disabled{% endif %}">Update tentacles</button>
         </div>
     </div>
     <div class="row col-12">
@@ -34,6 +35,11 @@
         </div>
         <div class="col-6">
             <button route="{{ url_for('start') }}" type="button" class="btn btn-success waves-effect {% if bot_status %}disabled{% endif %}">Start Octobot</button>
+        </div>
+    </div>
+    <div class="row col-12 mt-4">
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
     </div>
 </div>
