added install octobot and stop launcher buttons
made update tentacle button less visible

--- a/launcher/templates/footer.html
+++ b/launcher/templates/footer.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="page-footer fixed-bottom font-small danger-color lighten-2">
+<footer class="page-footer fixed-bottom font-small red lighten-2">
 
   <div class="footer-copyright text-center py-3">Follow OctoBot project updates on
       <a href="https://github.com/Drakkar-Software" target="_blank"><i class="fab fa-github"></i> GitHub</a>
