--- a/launcher/templates/bot_card.html
+++ b/launcher/templates/bot_card.html
@@ -37,9 +37,9 @@
             <button route="{{ url_for('start') }}" type="button" class="btn btn-success waves-effect {% if bot_status %}disabled{% endif %}">Start Octobot</button>
         </div>
     </div>
-    <div class="row col-12 mt-4">
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="mt-4">
+        <div class="progress" style="display: none">
+          <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
     </div>
 </div>
