--- a/launcher/templates/launcher_card.html
+++ b/launcher/templates/launcher_card.html
@@ -27,9 +27,9 @@
             <button route="{{ url_for('stop_launcher') }}" type="button" class="btn btn-danger waves-effect">Stop Octobot-Launcher</button>
         </div>
     </div>
-     <div class="row col-12 mt-4">
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="mt-4">
+        <div class="progress" style="display: none">
+          <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
     </div>
 </div>
