--- a/launcher/templates/bot_card.html
+++ b/launcher/templates/bot_card.html
@@ -30,11 +30,14 @@
         </div>
     </div>
     <div class="row col-12">
-        <div class="col-6">
+        <div class="col-4">
             <button route="{{ url_for('stop') }}" type="button" class="btn btn-danger waves-effect {% if not bot_status %}disabled{% endif %}">Stop Octobot</button>
         </div>
-        <div class="col-6">
+        <div class="col-4">
             <button route="{{ url_for('start') }}" type="button" class="btn btn-success waves-effect {% if bot_status %}disabled{% endif %}">Start Octobot</button>
+        </div>
+        <div class="col-4">
+            <a href="{{ bot_url }}" target="_blank" rel="noopener noreferrer"><button type="button" class="btn btn-primary waves-effect {% if not bot_status %}disabled{% endif %}">Open OctoBot</button></a>
         </div>
     </div>
     <div class="mt-4">
